--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask Webpage</title>
+    <title>Tutor Planet - Homepage</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
-    <h1>Hello, Flask!</h1>
+    <h1>Welcome to Tutor Planet!</h1>
+    <p>Here you can easily find and book the perfect tutor for your child for 11+ exam preparation.</p>
+
+    <button id="goToBrowseTutorsButton">Browse Tutors</button>
+
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 
