--- a/tutor_app/templates/index.html
+++ b/tutor_app/templates/index.html
@@ -13,6 +13,7 @@
     <p>Here you can easily find and book the perfect tutor for your child for 11+ exam preparation.</p>
 
     <button id="goToBrowseTutorsButton">Browse Tutors</button>
+    <button id="goToSignUpAsTutorButton">Sign Up as a Tutor</button>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
